--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
       <div id="runner"></div>
     </div>
     <div id="cube-blueprint" class="cube">
-      <div class="face front"></div>
-      <div class="face back"></div>
-      <div class="face right"></div>
-      <div class="face left"></div>
-      <div class="face top"></div>
-      <div class="face bottom"></div>
+      <div class="face front">💣</div>
+      <div class="face back">💣</div>
+      <div class="face right">💣</div>
+      <div class="face left">💣</div>
+      <div class="face top">💣</div>
+      <div class="face bottom">💣</div>
     </div>
     <div id="coin-blueprint" class="coin">
       <div class="face front">💰</div>
       <div class="face back">💰</div>
     </div>
+
     <script src="main.js"></script>
   </body>
 </html>
