--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <div id="scene">
-      <div id="road"></div>
+    <div id="game">
+      <div id="scene">
+        <div id="road"></div>
+      </div>
       <div id="runner"></div>
     </div>
+
     <div id="cube-blueprint" class="cube">
       <div class="face front">💣</div>
       <div class="face back">💣</div>
