--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8" />
     <title>Brainrot JS</title>
     <link rel="stylesheet" href="main.css" />
   </head>
@@ -8,22 +9,12 @@
     <div id="game">
       <div id="scene">
         <div id="road"></div>
+        <div id="runner"></div>
       </div>
-      <div id="runner"></div>
     </div>
 
-    <div id="cube-blueprint" class="cube">
-      <div class="face front">💣</div>
-      <div class="face back">💣</div>
-      <div class="face right">💣</div>
-      <div class="face left">💣</div>
-      <div class="face top">💣</div>
-      <div class="face bottom">💣</div>
-    </div>
-    <div id="coin-blueprint" class="coin">
-      <div class="face front">💰</div>
-      <div class="face back">💰</div>
-    </div>
+    <div id="bomb-blueprint" class="bomb">💣</div>
+    <div id="coin-blueprint" class="coin">💰</div>
 
     <script src="main.js"></script>
   </body>
