--- a/index.html
+++ b/index.html
@@ -2,14 +2,28 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Brainrot JS</title>
+    <title>Endless Runner</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <div id="game">
+    <div class="game">
       <div id="scene">
         <div id="road"></div>
         <div id="runner"></div>
+      </div>
+      <div class="level">
+        Level
+        <div id="level"></div>
+      </div>
+      <div class="score">
+        Score
+        <div id="score"></div>
       </div>
     </div>
     <script src="main.js"></script>
