--- a/index.html
+++ b/index.html
@@ -6,13 +6,30 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Dancing+Script:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
     <div class="game">
+      <!-- Start Screen -->
+      <div id="start-screen" class="start-screen">
+        <div class="start-content">
+          <h1 class="start-title">Valentine's Day Runner</h1>
+          <p class="start-subtitle">Plan the perfect date!</p>
+          <button id="start-button" class="start-button">
+            <span class="button-heart">❤️</span>
+            Start Game
+            <span class="button-heart">❤️</span>
+          </button>
+          <div class="start-instructions">
+            <p>Use arrow keys to move and jump</p>
+            <p>Choose your date activities at the gates</p>
+          </div>
+        </div>
+      </div>
+
       <div id="scene">
         <div id="road"></div>
         <div id="runner"></div>
