--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <!-- Start Screen -->
       <div id="start-screen" class="start-screen">
         <div class="start-content">
-          <h1 class="start-title">Valentine's Day Runner</h1>
-          <p class="start-subtitle">Plan the perfect date!</p>
+          <h1 class="start-title">Koopy's Day Runner</h1>
+          <p class="start-subtitle">Choose your perfect date!</p>
           <button id="start-button" class="start-button">
             <span class="button-heart">❤️</span>
             Start Game
